Rewrite whitepaper with stronger academic framing + add CITATION.cff
Whitepaper changes (based on GPT-5.4 systems reviewer feedback):

Title: "Decoupling Deployment Boundaries from Memory Boundaries
in Function Composition"

Thesis: Reframed from "serialization is expensive" to "the dominant
abstraction conflates deployment isolation with data representation
boundaries — we decouple them."

Added related work:
- FAASM (ATC 2020) — shared-memory serverless via WASM
- Nightcore (ASPLOS 2021) — low-latency serverless
- Cloudburst (VLDB 2020) — stateful FaaS with caching
- Boki (SOSP 2021) — shared logs for serverless
- SAND (ATC 2018) — application-level sandboxing
- Comparison table across 5 dimensions

Strengthened evaluation:
- Explicit "estimated baselines" caveat
- Hot-swap evaluation with production-scale caveats
- Threats to validity subsection
- GC impact discussion (shared heap, ZGC mitigation)
- Failure domain analysis (OOM kills organism)

New "Limitations and Future Work" section (9 subsections)

CITATION.cff added for GitHub "Cite this repository" button.
Ready for Zenodo upload as preprint.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>